--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@vuepic/vue-datepicker": "^8.2.0",
     "chart.js": "^4.4.2",
     "chartjs": "^0.3.24",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
+    "vue3-datepicker": "^0.4.0",
+    "vue3-daterange-picker": "^1.0.1",
     "vuetify": "^3.5.7"
   },
   "devDependencies": {
